# GAIA-RT-PDS

./: .gitignore  LICENSE  README.md  Yolov10.ipynb  data.yaml  pothole-detector.py  pyproject.toml
Previous Code Iterations/: Final-inference-code (modified).py  Final-inference-code-mod-2.py  Final-inference-code-mod-3.py  Final-inference-code-mod.py  Final-inference-code.py  Yolov10 - Other.ipynb  additional-code.py  app.py  cmds.txt  enhanced_model_server.py  enhanced_video_processor.py  export.py  live-old.py  live.py  location_based_alerts.py  model_server.py  steps.md  test-vid-geo.py  video_processor.py  web_interface.py
docs/Markdown/: acknowledgments.md  command-reference.md  configuration.md  contributing.md  default-email-config.md  dependencies.md  downloading-models.md  features.md  gmail-setup.md  installation.md  performance.md  project-background.md  project-structure.md  support.md  technical-details.md  troubleshooting.md  usage.md  use-cases.md  windows-quickstart.md
docs/Other/: SRS.docx
src/pothole_detector/: __init__.py  cli.py  detector.py  ffmpeg_utils.py  gmail_service.py  gps.py  location.py
utils/: add-geo-loc-to-img.py  add-geo-loc-to-vid.py  download_models.py  hf-uploader.py  pt-to-tflite.py  read-pickle.py
